--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.3",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "^1.0.0"
+    "grunt-sass": "^1.0.0",
+    "grunt-svg-sprite": "^1.2.9",
+    "grunt-svgmin": "^2.0.1"
   }
 }
