--- a/wp-content/themes/herrloc23/package.json
+++ b/wp-content/themes/herrloc23/package.json
@@ -17,6 +17,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-sass-glob": "^1.1.0",
     "gulp-uglify": "^3.0.2",
+    "macy": "^2.5.1",
     "webpack": "^5.82.1",
     "webpack-stream": "^7.0.0"
   },
