--- a/wp-content/themes/herrloc23/package.json
+++ b/wp-content/themes/herrloc23/package.json
@@ -18,6 +18,7 @@
     "gulp-sass-glob": "^1.1.0",
     "gulp-uglify": "^3.0.2",
     "macy": "^2.5.1",
+    "postcss-media-minmax": "^5.0.0",
     "webpack": "^5.82.1",
     "webpack-stream": "^7.0.0"
   },
@@ -37,8 +38,8 @@
     "sass": "^1.57.0"
   },
   "browserslist": [
-    "last 2 version",
-    "> 1%"
+    "last 5 version",
+    "> 0.5%"
   ],
   "eslintConfig": {
     "parserOptions": {
